[package]
name = "ai_address_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
actix-form-data = "0.6"
anyhow = "1"
urlencoding = "2.1"